--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Responsive Login And SignUp</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">    
-    <style>
-        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+        <link rel="stylesheet" href="css.css">
+
+        <style>
+           @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css");
+ @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
 
 * {
   margin: 0;
@@ -245,14 +248,14 @@ form {
 
   .container.active .form-box {
     right: 0;
-    bottom: 30%;
+    bottom: 27%;
   }
 
   .toggle-box::before {
     left: 0;
     top: -270%;
     width: 100%;
-    height: 305%;
+    height: 303%;
     border-radius: 20vw;
   }
   .social-icons {
@@ -272,7 +275,7 @@ form {
     top: 0;
   }
   .toggle-panel.toggle-left h1 {
-    font-size: 3.2rem;
+    font-size: 2.2rem;
   }
   .toggle-panel.toggle-left p {
     font-size: 1.2em;
@@ -292,7 +295,7 @@ form {
   }
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
   .form-box {
     padding: 20px;
   }
@@ -352,7 +355,7 @@ form {
         transform: translate(1px,-1px);
     }
 }
-    </style>
+        </style>
 </head>
 
 <body>
@@ -541,6 +544,4 @@ document.querySelector(".register .btn").addEventListener("click", (e) => {
 })
     </script>
 </body>
-
 </html>
-
